adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,7 @@
     <h1>Olá, Mundo !</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia quasi incidunt natus, odit facere atque amet fugit qui laudantium quis maxime eligendi inventore quo iure, eum earum esse molestias provident?</p>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis necessitatibus ex quos odio. Repudiandae quae eos et corporis accusamus! Ipsa provident pariatur earum quod omnis voluptatum dolore. Earum, quibusdam omnis!</p>
 </body>
 </html>
